docs: Update README and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "afl-scraper"
 version = "0.1.0"
-description = "Add your description here"
+description = "Data scraper for AFL matches and player statistics"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
