feat: Add player stat scraping by match
- Separate navigation and whole page fetching from parsing
- This allows scraper to scrape pages and parser to parse data from pages
- Add pandas in order to handle data in data frames for analysis
- Log data for matches for now, need to implement storage solution
- Data does not discern player teams, where and when match was

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click>=8.2.1",
+    "pandas>=2.3.3",
     "playwright>=1.52.0",
 ]
