feat: Add initial database
- Add database roles and users
- Add migrations for idempontent database upgrade/downgrade
- Add table SQL
- Add first migration for player table
- Use environment variables for database connections

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,11 @@ description = "Data scraper for AFL matches and player statistics"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.2",
     "click>=8.2.1",
     "pandas>=2.3.3",
     "playwright>=1.52.0",
+    "psycopg[binary]>=3.3.2",
 ]
 
 [project.scripts]
